--- a/apps/mobile/src/locales/tr.json
+++ b/apps/mobile/src/locales/tr.json
@@ -371,17 +371,17 @@
     "continue": "Devam",
     "start": "Başla",
     "welcome": "Lovendo'ya Hoş Geldiniz",
-    "welcomeMessage": "Gezginlerle bağlantı kurun ve unutulmaz deneyimler yaratın",
+    "welcomeMessage": "İçerik üreticilerini keşfedin ve hediyeleşerek bağ kurun",
     "step1Title": "Anları Keşfedin",
-    "step1Description": "Yerli halk tarafından oluşturulan benzersiz seyahat deneyimlerini keşfedin",
-    "step2Title": "Rezervasyon Yapın ve Bağlantı Kurun",
-    "step2Description": "Anları rezerve edin ve ev sahipleriyle sohbet edin",
-    "step3Title": "Hikayenizi Paylaşın",
-    "step3Description": "Kendi anlarınızı oluşturun ve para kazanın"
+    "step1Description": "İçerik üreticileri tarafından paylaşılan özel anları keşfedin",
+    "step2Title": "Destekleyin ve Bağlantı Kurun",
+    "step2Description": "Anlara destek olun ve üreticilerle sohbet edin",
+    "step3Title": "Vibe'ınızı Paylaşın",
+    "step3Description": "Kendi anlarınızı oluşturun ve destek kazanın"
   },
   "welcome": {
     "title": "Lovendo'ya Hoş Geldiniz",
-    "subtitle": "Yerel halkla tanışın. Deneyimlerinizi paylaşın.\nHer seyahati anlamlı kılın.",
+    "subtitle": "Anları paylaşın, destek kazanın.\nHer etkileşimi anlamlı ve değerli kılın.",
     "continueWithApple": "Apple ile devam et",
     "continueWithGoogle": "Google ile devam et",
     "continueWithFacebook": "Facebook ile devam et",
@@ -640,7 +640,7 @@
     "title": "Gelen Kutusu",
     "tabs": {
       "active": "Aktif Eşleşmeler",
-      "requests": "Talepler"
+      "requests": "Gelen Kutusu"
     },
     "empty": {
       "activeTitle": "Henüz mesaj yok",
